# retail_ai_assistance

./: .gitignore  RA7_Agent Assessment (1).docx  README.md  agent_graph.py  agent_orchestration.py  app.py  architecture.md  chat_agent.py  config.py  data_loader.py  docx_dump.txt  flaw.md  generate_data.py  main.py  problem.md  project.md  pyproject.toml  requirements.txt  retail recommendation AI.pptx
data/: .~lock.users.csv#
tools/: __init__.py  alternative_finder.py  event_tool.py  future_purchase_planner.py  product_recommender.py  social_tool.py  trend_tool.py  user_profiler.py
