[project]
name = "retail-ai-assistance-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.13.0",
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.6",
    "pandas>=3.0.2",
    "streamlit>=1.56.0",
]
